# modular-data-lab

./: .gitignore  README.md  pyproject.toml  run.py  run_tests.sh  setup.py  utils.py
src/modular_data_lab/: run.py  setup.py  templates.py  utils.py
tests/: conftest.py  test_backup.py  test_cli.py  test_integration.py  test_templates.py  test_utils.py
