[project]
name = "modular-data-lab"
version = "0.1.0"
requires-python = ">=3.12"
description = "A Python framework for organizing and managing data analysis projects in a modular structure."
keywords = ["data", "modular", "analysis", "framework"]
readme = "README.md"
authors = [{name = "UssopSniperKing"}]
license = "MIT"
license-files = ["LICEN[CS]E.*"]
dependencies = []

[project.urls]
Documentation = "https://github.com/ussopsniperking/modular-data-lab/README.md"
Repository = "https://github.com/ussopsniperking/modular-data-lab.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modular_data_lab"]

[project.scripts]
lab = "modular_data_lab.run:main"
lab-setup = "modular_data_lab.setup:main"
