[project]
name = "modular-data-lab"
version = "0.1.0"
requires-python = ">=3.12"
description = "A Python framework for organizing and managing data analysis projects in a modular structure."
keywords = ["data", "modular", "analysis", "framework"]
readme = "README.md"
authors = [{name = "UssopSniperKing"}]
license = "MIT"
license-files = ["LICEN[CS]E.*"]
dependencies = []

[project.urls]
Documentation = "https://github.com/ussopsniperking/modular-data-lab/README.md"
Repository = "https://github.com/ussopsniperking/modular-data-lab.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modular_data_lab"]

[project.scripts]
lab = "modular_data_lab.run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src/modular_data_lab",
    "--cov-report=html",
    "--cov-report=term-missing"
]

[tool.coverage.run]
source = ["src/modular_data_lab"]
omit = [
    "tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
